Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/Apply_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Apply_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not edit manually. This field is used to control the permission scheduler</inlineHelpText>
    <label>Apply Schedule</label>
    <type>Checkbox</type>
</CustomField>