Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/End_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>End_Schedule_ID__c</fullName>
    <inlineHelpText>This is the Apex Job ID for the scheduled permission revokal</inlineHelpText>
    <label>End Schedule ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>