Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>