Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona</label>
    <referenceTo>Persona__c</referenceTo>
    <relationshipLabel>User Persona Assignments</relationshipLabel>
    <relationshipName>User_Persona_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>