Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>