Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Permissions Assigned</fullName>
            </value>
            <value>
                <fullName>Permissions Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>