Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <label>Status Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>