Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Persona Assignments</relationshipLabel>
    <relationshipName>User_Persona_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>