Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/validationRules/Permanent_no_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Permanent_no_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>and (
 ISPICKVAL( Type__c ,&quot;Permanent&quot;),
  or (
    not( ISNULL( End_Time__c ) ),
    not( ISNULL( Start_Time__c  ) )
  )
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Cannot  specify End and Start time for Permanent permissions.</errorMessage>
</ValidationRule>