Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/validationRules/Start_date_issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_issue</fullName>
    <active>true</active>
    <description>If either start date or end date is set less than current datetime, the rule&apos;s error message will appear on the top of the page.</description>
    <errorConditionFormula>If( OR(Start_Time__c &lt;  NOW() , End_Time__c &lt; NOW()),true,false )</errorConditionFormula>
    <errorMessage>Start Time or End Time cannot be in the past. Please add a couple of minutes to related field.</errorMessage>
</ValidationRule>