Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/validationRules/Start_End_date_illogicalness.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_date_illogicalness</fullName>
    <active>true</active>
    <description>If current user sets start date less than the end date, then the rule&apos;s error message will appear on the top of the page.</description>
    <errorConditionFormula>IF( Start_Time__c &gt;  End_Time__c ,true, false)</errorConditionFormula>
    <errorMessage>Start Time cannot be after the End Time.</errorMessage>
</ValidationRule>