Dummy_Package_for_scratch_org/main/default/objects/User_Persona_Assignment__c/validationRules/Temporary_with_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Temporary_with_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>and (
 ISPICKVAL( Type__c ,&quot;Temporary&quot;),
  or (
   ISNULL( End_Time__c ),
   ISNULL( Start_Time__c  )
  )
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Specify End and Start time for Temporary permissions.</errorMessage>
</ValidationRule>